# lishobu

./: .gitignore  README.md  docker-compose.yaml
backend/: .envrc  Cargo.toml  Dockerfile
backend/src/: config.rs  error.rs  main.rs  server.rs
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: 404.html
frontend/scripts/: build.js
frontend/src/: App.svelte
frontend/src/lib/services/: accounts.ts
frontend/src/routes/: Home.svelte
scripts/: create-db.sh
