[package]
name = "lishobu"
version = "0.1.0"
authors = ["Garrett Massman <gmassman20@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.9"
env_logger = "0.9"
log = "0.4"
#redis = "0.21"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres" ] }
anyhow = "1.0"
